2008-06-16 yusei
* Update accounting_zuite/test_account_module/test_account_module_domain_tree.html
for the recent changes of domain tree.

2008-03-04 jerome
* Define an "is_selenium_0_8" boolean variable in the common template and start using it for commands that requires selenium 0.8 or more.

2008-03-03 jerome
* Add tests for grouping reference fast input

2008-01-21 yusei
* Add tests for section selection box.

2006-09-25 jerome
* Add tests for bank accounts
* Add tests for accounting transaction inputing

2006-09-13 jerome
* Fix tests for organisations.

2006-08-14 jerome
* Initial revision